--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href="/assets/fonts/font.css">
     <link rel="stylesheet" href="/assets/css/codehighlight.css">
+    <script type="text/javascript" src="https://livejs.com/live.js"></script>
 </head>
 <body id="body-id">
 <header class="gjs-grid-column">
